--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                     <p> last seen 2mins</p>
                 </div>
 
-                <div class="icon">
+                <div class="icon-container">
                     <i class="fa-solid fa-ellipsis-vertical" id="icon" ></i>
                 </div>
 
 
                 <div class="fly-in-menu">
-                    <p> View Profile</p>
-                    <p> See details</p>
+                    <p class="profile"> View Profile</p>
+                    <p class="details"> See details</p>
                 </div>
 
             </div>
