--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="right-side-box">
 
                 <div class="title-box">
-                    <p> Cofounder</p>
+                    <h4> Cofounder</h4>
                     <p> last seen 2mins</p>
                 </div>
 
@@ -37,7 +37,42 @@
                 </div>
 
 
-                <div class="fly-in-menu">
+                <div class="fly-in-menu" id="fly-in-menu">
+                    <p class="profile"> View Profile</p>
+                    <p class="details"> Message </p>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="list-box">
+
+            <div class="left-side-box">
+
+                <div class="profile-img">
+                    <img src="./Debbie pic.png" alt="Profile picture of Debbie" class="profile-pic">
+                </div>
+
+                <div class="name-box">
+                    <h1 class="name"> Deborah Bashorun </h1>
+                    <p class="email"> dbashorun@gmail.com</p>
+                </div>
+
+            </div>
+
+            <div class="right-side-box">
+
+                <div class="title-box">
+                    <h4> Cofounder</h4>
+                    <p> last seen 2mins</p>
+                </div>
+
+                <div class="icon-container">
+                    <i class="fa-solid fa-ellipsis-vertical" id="icon2" ></i>
+                </div>
+
+
+                <div class="fly-in-menu2" id="fly-in-menu2">
                     <p class="profile"> View Profile</p>
                     <p class="details"> See details</p>
                 </div>
@@ -45,9 +80,40 @@
             </div>
         </div>
 
+        <div class="list-box">
+
+            <div class="left-side-box">
+
+                <div class="profile-img">
+                    <img src="./Debbie pic.png" alt="Profile picture of Debbie" class="profile-pic">
+                </div>
+
+                <div class="name-box">
+                    <h1 class="name"> Deborah Bashorun </h1>
+                    <p class="email"> dbashorun@gmail.com</p>
+                </div>
+
+            </div>
+
+            <div class="right-side-box">
+
+                <div class="title-box">
+                    <h4> Cofounder</h4>
+                    <p> last seen 2mins</p>
+                </div>
+
+                <div class="icon-container">
+                    <i class="fa-solid fa-ellipsis-vertical" id="icon" ></i>
+                </div>
 
 
+                <div class="fly-in-menu" id="fly-in-menu">
+                    <p class="profile"> View Profile</p>
+                    <p class="details"> See details</p>
+                </div>
 
+            </div>
+        </div>
 
 
 
